# Epiphany

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE  README.md  eval-plan.md
apps/: README.md
apps/epiphany-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/epiphany-gui/src-tauri/capabilities/: default.json
apps/epiphany-gui/src-tauri/src/: lib.rs  main.rs
docs/: README.md  epiphany_body_whitepaper.tex  epiphany_investor_brief.md
epiphany-codex-bridge/: Cargo.toml
epiphany-codex-bridge/src/: checkpoint.rs  context.rs  context_protocol.rs  coordinator.rs  coordinator_protocol.rs  cultnet.rs  error.rs  invalidation.rs  jobs.rs  launch.rs  launch_context.rs  legacy_graph_compat.rs  lib.rs  mutation.rs  mutation_service.rs  pressure.rs  protocol_edge.rs  reorient.rs  results.rs  retrieve.rs  retrieve_protocol.rs  runtime_results.rs  scene.rs  scene_protocol.rs  state.rs  token_usage.rs  view.rs  view_protocol.rs
epiphany-codex-bridge/src/prompts/: epiphany_specialists.toml
epiphany-core/: Cargo.toml
epiphany-core/src/: admitted_model_direction_consideration.rs  agent_launch.rs  agent_memory.rs  agent_utterance_state.rs  body_gateway.rs  continuity_gateway.rs  coordinator_acceptance.rs  coordinator_interrupt.rs  coordinator_launch.rs  coordinator_launch_context.rs  coordinator_objective_intake.rs  coordinator_results.rs  coordinator_service.rs  coordinator_state.rs  coordinator_state_transaction.rs  cultmesh_integration.rs  distillation.rs  eyes_gateway.rs  face_turn.rs  hands_gateway.rs  heartbeat_state.rs  host_identity.rs  idunn_provider_health.rs  idunn_runtime_health.rs  imagination_consideration.rs  lib.rs  life_gateway.rs  mind_gateway.rs  modeling_gateway.rs  operator_command.rs  operator_command_service.rs  organ_dependencies.rs  packaged_release.rs  persona_conversation.rs  persona_discord_crossing.rs  persona_discord_permit.rs  persona_feedback_admission.rs  persona_memory_cache.rs  persona_turn.rs  process_observation.rs  (+29 more)
epiphany-core/src/heartbeat_state/: heartbeat_documents.rs  heartbeat_pacing.rs  heartbeat_projection.rs  heartbeat_roles.rs  heartbeat_store.rs
epiphany-core/src/memory_graph/: compose.rs  context_cut.rs  embedding.rs  freshness.rs  ids.rs  mod.rs  patch.rs  qdrant.rs  semantic_context.rs  semantic_index.rs  semantic_projection.rs  semantic_projector.rs  semantic_projector_pulse.rs  store.rs  tests.rs  validation.rs
epiphany-core/src/memory_graph/profiles/: agent.rs  heartbeat.rs  mod.rs  repo.rs
epiphany-core/src/prompts/: epiphany_doctrine.md  epiphany_specialists.toml  epiphany_state_intro.md  repo_memory_distiller.md  repo_personality_distiller.md  repo_trajectory_distiller.md
epiphany-core/src/surfaces/: coordinator.rs  crrc.rs  freshness.rs  graph_context.rs  jobs.rs  mod.rs  planning.rs  pressure.rs  reorient.rs  role_board.rs  role_result.rs  scene.rs  state_patch.rs  view.rs  worker_launch.rs
epiphany-core/tests/: cultnet_backend.rs
epiphany-model-adapter/: Cargo.toml
epiphany-openai-adapter/: Cargo.toml
epiphany-openai-auth-spine/: Cargo.toml
epiphany-openai-auth-spine/src/: lib.rs
epiphany-openai-codex-spine/: Cargo.toml
epiphany-openai-codex-spine/src/: lib.rs
epiphany-openai-runtime/: Cargo.toml
epiphany-openai-runtime/src/: lib.rs  persona_executor.rs
epiphany-state-model/: Cargo.toml
epiphany-state-model/src/: lib.rs  prompt.rs
epiphany-state-model/src/prompts/: epiphany_doctrine.md  epiphany_state_intro.md
epiphany-tool-adapter/: Cargo.toml
epiphany-tool-codex-mcp-spine/: Cargo.toml
epiphany-tool-codex-mcp-spine/src/: main.rs
epiphany-tool-mcp-runtime/: Cargo.toml
epiphany-tool-mcp-runtime/src/: config.rs  lib.rs  main.rs  native_source.rs
notes/: README.md  agent-memory-fractal-cache-plan.md  architecture-rationale.md  body-cultnet-contracts.md  codex-auth-spine-inventory.md  codex-epiphany-mode-plan.md  codex-repository-algorithmic-map.md  codex-starvation-and-cultnet-liberation-plan.md  conceptual-substitution-audit-2026-07-12.md  continuity-cultnet-contracts.md  epiphany-anatomy.md  epiphany-app-server-client-matrix.md  epiphany-body-proprioception-pass.md  epiphany-core-harness-surfaces.md  epiphany-cultmesh-dreaming-roadmap.md  epiphany-current-algorithmic-map.md  epiphany-discord-operator-nerve.md  epiphany-distilled-agent-doctrine.md  epiphany-fork-implementation-plan.md  epiphany-ideal-architecture-rebuild-plan.md  epiphany-investor-readiness-roadmap.md  epiphany-memory-graph-unified-plan.md  epiphany-planning-substrate.md  epiphany-repo-swarm-mvp-contract.md  epiphany-rider-unity-integration-plan.md  epiphany-safety-architecture.md  epiphany-swarm-readiness-plan.md  epiphany-verse-architecture.md  eyes-cultnet-contracts.md  fresh-workspace-handoff.md  hands-cultnet-contracts.md  json-contamination-ledger.md  life-cultnet-contracts.md  memory-graph-semantic-projection-authority-map.md  mind-cultnet-contracts.md  native-coordinator-liberation-map.md  organ-dependency-contracts.md  perfect-machine-audit-roadmap.md  persona-conversation-authority-map.md  persona-discord-permit-authority-map.md  (+12 more)
protocol/: controller-actions.md
schemas/: README.md  agent-state-variable-glossary.md  agent-utterance-state-schema.md  canonical-agent-state-schema.md  dossier-profiles.md  ghostlight.agent-state.schema.json  heartbeat-state-schema.md  organ-state-profiles.md  repo-personality-birth-projection.md
state/: agent-heartbeats.cc  agent-heartbeats.json  agent-heartbeats.msgpack  agents.cc  agents.msgpack  branches.json  evidence.jsonl  face-discord.json  face-discord.toml  ledgers.cc  ledgers.msgpack  map.yaml  memory-graph.msgpack  persona-discord.toml  persona-reddit.toml  scratch-compaction-17cd64d8-da88-4642-a871-4cf1b768c20a.md  scratch-compaction-5bc97a5a-2cc1-4d34-a36b-9ce35ebeaa2f.md  scratch-compaction-a1f46d3d-6bb5-4c5b-9f8c-4fe7d590e9d4.md  scratch.md  void-memory.toml
tools/: epiphany_agent_heartbeat.py  epiphany_agent_heartbeat_smoke.py  epiphany_agent_memory.py  epiphany_agent_memory_smoke.py  epiphany_agent_telemetry.py  (+31 more)
(+134 files in other folders)
