[package]
name = "epiphany-codex-bridge"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "../LICENSE"

[lib]
name = "epiphany_codex_bridge"
path = "src/lib.rs"

[dependencies]
codex-utils-absolute-path = { path = "../vendor/codex/codex-rs/utils/absolute-path" }
notify = "8.2.0"
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"
