[package]
name = "epiphany-openai-auth-spine"
version = "0.1.0"
edition = "2024"

[lib]
name = "epiphany_openai_auth_spine"
path = "src/lib.rs"

[dependencies]
codex-login = { path = "../vendor/codex/codex-rs/login" }
serde_json = "1"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
