[package]
name = "epiphany-openai-codex-spine"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "../LICENSE"

[lib]
name = "epiphany_openai_codex_spine"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
codex-api = { path = "../vendor/codex/codex-rs/codex-api" }
codex-app-server-protocol = { path = "../vendor/codex/codex-rs/app-server-protocol" }
codex-login = { path = "../vendor/codex/codex-rs/login" }
codex-model-provider = { path = "../vendor/codex/codex-rs/model-provider" }
codex-model-provider-info = { path = "../vendor/codex/codex-rs/model-provider-info" }
codex-protocol = { path = "../vendor/codex/codex-rs/protocol" }
epiphany-openai-adapter = { path = "../epiphany-openai-adapter" }
futures = "0.3"
