[package]
name = "epiphany-openai-codex-spine"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "../LICENSE"

[lib]
name = "epiphany_openai_codex_spine"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
codex-api = { path = "../vendor/codex/codex-rs/codex-api" }
codex-app-server-protocol = { path = "../vendor/codex/codex-rs/app-server-protocol" }
codex-login = { path = "../vendor/codex/codex-rs/login" }
codex-model-provider = { path = "../vendor/codex/codex-rs/model-provider" }
codex-model-provider-info = { path = "../vendor/codex/codex-rs/model-provider-info" }
codex-protocol = { path = "../vendor/codex/codex-rs/protocol" }
epiphany-openai-adapter = { path = "../epiphany-openai-adapter" }
futures = "0.3"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "epiphany-openai-spine"
path = "src/bin/epiphany-openai-spine.rs"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
