[package]
name = "epiphany-state-model"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "../LICENSE"

[lib]
name = "epiphany_state_model"
path = "src/lib.rs"

[dependencies]
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "11", features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
