[package]
name = "epiphany-tool-codex-mcp-spine"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "../LICENSE"

[dependencies]
anyhow = "1"
allocative = { version = "=0.3.4", features = ["hashbrown"] }
async-channel = "2"
codex-config = { path = "../vendor/codex/codex-rs/config" }
codex-exec-server = { path = "../vendor/codex/codex-rs/exec-server" }
codex-mcp = { path = "../vendor/codex/codex-rs/codex-mcp" }
codex-protocol = { path = "../vendor/codex/codex-rs/protocol" }
cultcache-rs = { path = "../vendor/cultcache-rs" }
epiphany-tool-adapter = { path = "../epiphany-tool-adapter" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"

[[bin]]
name = "epiphany-tool-codex-mcp-spine"
path = "src/main.rs"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
