[package]
name = "epiphany-tool-mcp-runtime"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "../LICENSE"

[dependencies]
anyhow = "1"
epiphany-tool-adapter = { path = "../epiphany-tool-adapter" }
epiphany-core = { path = "../epiphany-core" }
cultcache-rs = { path = "../vendor/cultcache-rs" }
http = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "2.2.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "epiphany-tool-mcp-runtime"
path = "src/main.rs"
