[package]
name = "epiphany-gui"
version = "0.1.0"
description = "Epiphany local operator console"
authors = ["GameCult"]
edition = "2021"

[lib]
name = "epiphany_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
